# dvol_research

./: .gitignore  AGENTS.md  README.md  draft.ipynb  pyproject.toml  s01_problem_statement.md  s02_research_design_plan.md  s03_TRD.md
notebooks/: 01_dvol_research.ipynb  01_dvol_research.py
tests/: test_sanity.py
